--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "bensampo/laravel-enum": "^2.2",
+        "dompdf/dompdf": "^0.8.6",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
@@ -17,9 +18,7 @@
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "3.3.3",
-        "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.15",
-        "shuchkin/simplexlsx": "^0.8.19",
         "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
