--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.5",
         "lcobucci/jwt": "3.3.3",
         "phpoffice/phpspreadsheet": "^1.15",
-        "spatie/laravel-permission": "^3.18"
+        "spatie/laravel-permission": "^3.18",
+      "ext-mysqli": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
